--- a/src/Presentation/SmartStore.Web/Administration/Views/CheckoutAttribute/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/CheckoutAttribute/List.cshtml
@@ -8,7 +8,9 @@
         @T("Admin.Catalog.Attributes.CheckoutAttributes")
     </div>
     <div class="options">
-        <a href="@Url.Action("Create")" class="btn btn-primary"><i class="fa fa-plus"></i>&nbsp;@T("Admin.Common.AddNew")</a>
+        <a href="@Url.Action("Create")" class="btn btn-primary">
+			<i class="fa fa-plus"></i>&nbsp;@T("Admin.Common.AddNew")
+		</a>
     </div>
 </div>
 <script>
@@ -43,6 +45,7 @@
 						.Hidden(Model.AvailableStores.Count <= 1)
 						.Centered();
 				})
+				.Pageable(settings => settings.PageSize(Model.GridPageSize).Position(GridPagerPosition.Both))
 				.DataBinding(dataBinding => dataBinding.Ajax().Select("List", "CheckoutAttribute"))
 				.ClientEvents(events => events.OnRowDataBound("checkoutAttributesGrid_onRowDataBound"))
 				.EnableCustomBinding(true))
