--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -911,6 +911,9 @@ td.adminSeparator hr {
 	.disabled {
 		.muted();
 	}
+	.centered {
+		text-align: center;
+	}
 	.progress-info {
 		min-width: 260px;
 	}
