Improved export deployment

--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -1580,6 +1580,13 @@ table.payment-method-features td {
 }
 
 
+/* Data exchange
+-------------------------------------------------------------- */
+.profile-list {
+	margin-bottom: 10px;
+	border-bottom: 1px solid #ddd;
+}
+
 /* Import column mapping
 -------------------------------------------------------------- */
 @media (max-width: 1280px) {
