--- a/src/Presentation/SmartStore.Web/Administration/Views/Export/_ProfileList.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Export/_ProfileList.cshtml
@@ -20,7 +20,7 @@
 
 	@if (Model.Any())
 	{
-		<table class="table admin-table export-profile-list" style="margin-bottom: 0; border-bottom: 1px solid #ddd">
+		<table class="table admin-table export-profile-list profile-list">
 			<thead>
 				<tr>
 					<th class="ac"></th>
@@ -85,14 +85,14 @@
 			</tbody>
 		</table>
 	}
-	else {
+	else
+	{
 		<div class="muted">@T("Admin.DataExchange.Export.NoProfiles")</div>
 	}
 
-
 	@if (!isSystemProfiles)
 	{
-		<a href="javascript:void(0)" data-url="@Url.Action("Create")" class="btn btn-warning export-profile-button" style="margin-top: 10px">
+		<a href="javascript:void(0)" data-url="@Url.Action("Create")" class="btn btn-warning export-profile-button">
 			<i class="fa fa-plus"></i>&nbsp;&nbsp;@T("Admin.DataExchange.AddNewProfile")
 		</a>
 	}
