--- a/src/Presentation/SmartStore.Web/Administration/Views/Export/Preview.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Export/Preview.cshtml
@@ -2,7 +2,7 @@
 @using SmartStore.Core.Domain.DataExchange
 @model ExportPreviewModel
 @{
-	var title = string.Concat(T("Admin.Common.Preview"), " ", T("Common.Export"));
+	var title = string.Concat(T("Common.Export"), " - ", T("Admin.Common.Preview"));
 	ViewBag.Title = title;
 }
 
