--- a/src/Presentation/SmartStore.Web/Administration/Views/Import/Edit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Import/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@using SmartStore.Admin.Models.DataExchange;
 @model ImportProfileModel
 @{
-	var title = string.Concat(T("Admin.Common.Edit"), " ", T("Common.Profile"));
+	var title = string.Concat(T("Common.Profile"), " - ", T("Admin.Common.Edit"));
 	ViewBag.Title = title;
 }
 
