--- a/src/Presentation/SmartStore.Web/Administration/Views/Export/_ProfileList.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Export/_ProfileList.cshtml
@@ -51,7 +51,7 @@
 							@Html.IconForFileExtension(profile.Provider.FileExtension, true)
 						</td>
 						<td id="ExportFileCount@(profile.Id)" class="ac">
-							@Html.Partial("ProfileFileCount", profile.Details)
+							@Html.Partial("ProfileFileCount", profile.Details.ExportFileCount)
 						</td>
 						<td>
 							<div class="last-run-info">
