--- a/src/Presentation/SmartStore.Web/Views/Product/_BundleItemsAddToCart.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/_BundleItemsAddToCart.cshtml
@@ -10,16 +10,6 @@
         <div class="form-inline clearfix" style="@(Model.IsAvailable ? "" : "display:none;")">
             @if (!Model.AddToCart.DisableBuyButton)
             {
-                @*@Html.LabelFor(model => Model.AddToCart.EnteredQuantity, new { @class = "qty-label" })<text>:</text>
-                if (Model.AddToCart.AllowedQuantities.Count > 0)
-                {
-                    @Html.DropDownListFor(model => Model.AddToCart.EnteredQuantity, Model.AddToCart.AllowedQuantities, new { @class = "qty-dropdown" })
-                }
-                else
-                {
-                    @Html.TextBoxFor(model => Model.AddToCart.EnteredQuantity, new { @class = "qty-input", style = "width:25px" })
-                }*@
-
                 <a class="btn btn-warning add-to-cart-button ajax-cart-link"
                    href="#"
 				   rel="nofollow"
@@ -51,8 +41,8 @@
 
 <div class="bundle-item-overview">
     @{
-        int i = 0;
-        int bundleItemAmount = Model.BundledItems.Count;
+		var i = 0;
+		var bundleItemCount = Model.BundledItems.Where(x => x.BundleItem.Visible).Count();
     }
 
     @foreach (var item in Model.BundledItems.Where(x => x.BundleItem.Visible))
@@ -77,10 +67,10 @@
         if (item.BundleItem.Quantity > 1)
         {
             <strong>&#215;&nbsp;@item.BundleItem.Quantity</strong>
-        }
+		}
 
-        if (bundleItemAmount != (i + 1))
-        {
+		if (bundleItemCount != (i + 1))
+		{
             <i class="fa fa-plus"></i>
         }
 
