--- a/src/Presentation/SmartStore.Web/Administration/Views/Export/ProfileFileCount.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Export/ProfileFileCount.cshtml
@@ -5,5 +5,5 @@
 }
 else
 {
-	<span title="@T("Admin.Common.NoTempFilesFound")">@Model</span>
+	<span title="@T("Common.NoFilesAvailable")">@Model</span>
 }
