--- a/src/Presentation/SmartStore.Web/Administration/Views/Export/ProfileFileCount.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Export/ProfileFileCount.cshtml
@@ -1,9 +1,10 @@
-﻿@model int
-@if (Model > 0)
+﻿@using SmartStore.Admin.Models.DataExchange;
+@model ExportFileCountModel
+@if (Model.HasItems)
 {
-	<a href="javascript:void(0)" class="export-file-count">@Model</a>
+	<a href="javascript:void(0)" class="export-file-count">@Model.FileCount</a>
 }
 else
 {
-	<span title="@T("Common.NoFilesAvailable")">@Model</span>
+	<span title="@T("Common.NoFilesAvailable")">0</span>
 }
