Added file dialog for export deployment

--- a/src/Presentation/SmartStore.Web/Administration/Views/Export/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Export/List.cshtml
@@ -98,7 +98,7 @@
 
 			$({}).doAjax({
 				type: 'GET',
-				url: '@Url.Action("ProfileFileDetails")?profileId=' + id,
+				url: '@Url.Action("ProfileFileDetails")?deploymentId=0&profileId=' + id,
 				smallIcon: fileDialog.find('.modal-body'),
 				callbackSuccess: function (response) {
 					fileDialog.find('.modal-body').html(response);
