--- a/src/Presentation/SmartStore.Web/Administration/Views/Export/ProfileFileCount.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Export/ProfileFileCount.cshtml
@@ -2,7 +2,7 @@
 @model ExportFileCountModel
 @if (Model.HasItems)
 {
-	<a href="javascript:void(0)" class="export-file-count">@Model.FileCount</a>
+	<a href="javascript:void(0)" class="export-file-count"><strong>@Model.FileCount</strong></a>
 }
 else
 {
