--- a/src/Presentation/SmartStore.Web/Administration/Views/Export/_Tab.Deployment.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Export/_Tab.Deployment.cshtml
@@ -118,7 +118,7 @@
 					@foreach (var deployment in Model.Deployments)
 					{
 						var result = deployment.LastResult;
-						<tr class="@(deployment.Enabled ? "" : "disabled")">
+						<tr class="@(deployment.Enabled ? "" : "disabled")" data-deployment-id="@deployment.Id">
 							<td>
 								<div>
 									<a href="@Url.Action("EditDeployment", new { id = deployment.Id })">@deployment.Name</a>
@@ -149,7 +149,14 @@
 								@Html.SymbolForBool(deployment.Enabled)
 							</td>
 							<td class="ac">
-								TODO
+								@if (deployment.FileCount == null)
+								{
+									<span title="@T("Common.Unavailable")">@Html.SymbolForBool(false)</span>
+								}
+								else
+								{
+									@Html.Partial("ProfileFileCount", deployment.FileCount)
+								}
 							</td>
 							<td>
 								@if (result == null)
@@ -193,6 +200,17 @@ else
 		@Html.Raw(T("Admin.DataExchange.Export.NonFileBasedExport.Note"))
 	</div>
 }
+
+<div id="deployment-file-dialog" class="modal modal-xlarge hide fade" tabindex="-1">
+	<div class="modal-header">
+		<button type="button" class="close" data-dismiss="modal"><b>&#215;</b></button>
+		<h4 class="caption">@T("Admin.DataExchange.Export.ExportFiles")</h4>
+	</div>
+	<div class="modal-body"></div>
+	<div class="modal-footer">
+		<button class="btn" data-dismiss="modal">@T("Common.Cancel")</button>
+	</div>
+</div>
 
 @helper FileNamePatternDescription()
 {
@@ -249,5 +267,27 @@ else
 			$('#FileNamePatternDescriptionLink').html((descriptions.is(':visible') ? '@T("Admin.Common.Show")' : '@T("Admin.Common.Hide")') + '…');
 			descriptions.toggle();
 		});
+
+		// show deployment file dialog
+		$(document).on('click', '.export-file-count', function (e) {
+			e.preventDefault();
+			var fileDialog = $('#deployment-file-dialog'),
+				id = $(this).closest('tr').attr('data-deployment-id');
+
+			fileDialog.find('.modal-body').empty();
+
+			$({}).doAjax({
+				type: 'GET',
+				url: '@Url.Action("ProfileFileDetails")?profileId=0&deploymentId=' + id,
+				smallIcon: fileDialog.find('.modal-body'),
+				callbackSuccess: function (response) {
+					fileDialog.find('.modal-body').html(response);
+				}
+			});
+
+			fileDialog.modal('show');
+			return false;
+		});
+
 	});
 </script>
