--- a/src/Presentation/SmartStore.Web/Administration/Views/Export/ProfileFileCount.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Export/ProfileFileCount.cshtml
@@ -1,8 +1,7 @@
-﻿@using SmartStore.Admin.Models.DataExchange;
-@model ExportFileCountModel
-@if (Model.HasItems)
+﻿@model int
+@if (Model > 0)
 {
-	<a href="javascript:void(0)" class="export-file-count"><strong>@Model.FileCount</strong></a>
+	<a href="javascript:void(0)" class="export-file-count"><strong>@Model</strong></a>
 }
 else
 {
